feat: apply sort in query
