# src/controllers/trainee/validation.ts
@@ -56,6 +56,19 @@ const validation = {
             number: true,
             required: false,
         },
+
+        sort: {
+          custom: (sort) => {
+            if (!(sort === '1' || sort === '-1')) {
+              throw new Error('sort value must be 1 or -1');
+            }
+          },
+          default: 1,
+          errorMessage: 'Skip is invalid',
+          in: ['query'],
+          number: true,
+          required: false,
+        },
     },
 
     update:
